--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "require": {
         "zendframework/zend-loader": "~2.3",
-        "zendframework/zend-mvc": "~2.3",
+        "zendframework/zend-mvc": "~2.3 || ~3.0",
         "zendframework/zend-modulemanager": "~2.3",
         "zendframework/zend-view": "~2.3"
     },
